@@ -1,3 +1,7 @@
+3856.	[bug]		Configuring libjson without also configuring libxml
+			resulting in a REQUIRE assertion when retrieving
+			statistics using json. [RT #36009]
+
 3855.	[bug]		Limit smoothed round trip time aging to no more than
 			once a second. [RT #32909]
 
